--- a/web/components/GameGrid/GameGrid.module.scss
+++ b/web/components/GameGrid/GameGrid.module.scss
@@ -420,6 +420,36 @@
     height: 35px;
   }
 
+  .gameGridTitle {
+    font-size: 1.5em;
+    width: 100%;
+  }
+
+  .actions {
+    width: 100%;
+  }
+
+  .prevNextButtons {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 0.75rem;
+  }
+
+  .dateButtonMode {
+    font-family: roboto condensed, sans-serif;
+    position: relative;
+    height: 20px;
+    width: 110px;
+    background: #07aae2;
+    color: #ffffff;
+    border: 1px solid white;
+    padding-left: 10px;
+    padding-right: 10px;
+    border-radius: 6px;
+  }
+
   .gridWrapper {
     width: 100%;
     margin-top: 20px;
@@ -446,7 +476,7 @@
   .scheduleGrid td:nth-child(n + 2) {
     font-family: roboto condensed, sans-serif;
     padding: 2px 2px;
-    min-width: 30px;
+    min-width: 35px;
     max-width: 50px;
     text-align: center;
     font-size: 8px;
@@ -463,7 +493,18 @@
   .scheduleGrid tr th:nth-child(9),
   .scheduleGrid tr th:nth-child(10),
   .scheduleGrid tr th:nth-child(11) {
+    font-family: roboto condensed, sans-serif;
+    padding: 2px 2px;
+    min-width: 35px;
+    max-width: 50px;
+    text-align: center;
+    font-size: 8px;
     padding-bottom: 8px;
+    min-width: 35px;
+  }
+
+  .blurredImage {
+    filter: blur(4px); // Adjust the blur amount as needed
   }
 
   .scoreAndHomeAway {
@@ -487,6 +528,7 @@
   .mobileFontStyle {
     font-family: "Roboto Condensed", sans-serif !important;
     font-size: 8px !important;
+    margin-bottom: 7px !important;
   }
 
   .score {
