--- a/web/components/GameGrid/Toggle/Toggle.module.css
+++ b/web/components/GameGrid/Toggle/Toggle.module.css
@@ -28,7 +28,7 @@
   content: "";
   height: 10px;
   width: 10px;
-  left: 2.5px;
+  right: 2.5px;
   bottom: 2.5px;
   background-color: white;
   -webkit-transition: 0.4s;
@@ -46,9 +46,9 @@ input:focus + .slider {
 }
 
 input:checked + .slider:before {
-  -webkit-transform: translateX(15px);
-  -ms-transform: translateX(15px);
-  transform: translateX(15px);
+  -webkit-transform: translateX(-15px);
+  -ms-transform: translateX(-15px);
+  transform: translateX(-15px);
 }
 
 /* Rounded sliders */
@@ -77,14 +77,14 @@ input:checked + .slider:before {
     background-color: #FFF;
     height: 6px; /* Half of the original height */
     width: 6px; /* Half of the original width */
-    left: 3px; /* Adjusted to maintain the layout */
-    bottom: 1.25px; /* Adjusted to maintain the layout */
+    right: 2px; /* Adjusted to maintain the layout */
+    bottom: 2px; /* Adjusted to maintain the layout */
   }
 
   input:checked + .slider:before {
-    -webkit-transform: translateX(10px); /* Half of the original transform */
-    -ms-transform: translateX(10px); /* Half of the original transform */
-    transform: translateX(8px); /* Half of the original transform */
+    -webkit-transform: translateX(-10px); /* Half of the original transform */
+    -ms-transform: translateX(-10px); /* Half of the original transform */
+    transform: translateX(-10px); /* Half of the original transform */
   }
 }
 
@@ -106,13 +106,13 @@ and (max-device-width: 932px) {
     background-color: #FFF;
     height: 10px; /* Half of the original height */
     width: 10px; /* Half of the original width */
-    left: 3px; /* Adjusted to maintain the layout */
+    right: 3px; /* Adjusted to maintain the layout */
     bottom: 2px; /* Adjusted to maintain the layout */
   }
 
   input:checked + .slider:before {
-    -webkit-transform: translateX(14px); /* Half of the original transform */
-    -ms-transform: translateX(14px); /* Half of the original transform */
-    transform: translateX(14px); /* Half of the original transform */
+    -webkit-transform: translateX(-14px); /* Half of the original transform */
+    -ms-transform: translateX(-14px); /* Half of the original transform */
+    transform: translateX(-14px); /* Half of the original transform */
   }
 }
