--- a/web/pages/GoalieTrends.module.scss
+++ b/web/pages/GoalieTrends.module.scss
@@ -1,7 +1,13 @@
+// Non-Mobile display:none
+
+.teamSelector {
+  display: none;
+}
+
 // Base container styles
 .container {
   max-width: 1200px;
-  width: 780px;
+  width: 100%;
   margin: auto;
   padding: 20px;
   font-family: "Roboto Condensed", sans-serif;
@@ -149,7 +155,7 @@
 
 .goalieChart {
   padding-bottom: 10px;
-  width: 240px;
+  width: 200px;
   margin: auto;
 }
 
@@ -189,7 +195,6 @@
   position: relative;
   width: 40px;
   height: 20px;
-  -webkit-appearance: none;
   background: #c6c6c6;
   outline: none;
   border-radius: 20px;
@@ -221,10 +226,108 @@
 
 // Single Chart
 
-.newChart {
-  color: white; // Choose your color
-  background-color: black; // Choose your background
-  text-align: center;
-  padding: 20px;
-  border-radius: 4px;
+@media screen and (max-width: 768px) {
+  .container {
+    width: 100%;
+    padding: 10px;
+  }
+
+  .titleContainer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 10px;
+  }
+
+  .toggleSwitch {
+    padding: 3px 5px;
+    background-color: #07aae2;
+    border-radius: 3px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    // You can also target specific elements within the toggleSwitch
+    select {
+      border: 1px solid #ccc;
+      border-radius: 3px;
+      background-color: #292929;
+      color: #c6c6c6;
+    }
+
+    // If you have other elements like buttons or labels inside, style them too
+    button {
+      border: none;
+      border-radius: 3px;
+      background-color: #007bff;
+      color: white;
+      cursor: pointer;
+
+      &:hover {
+        background-color: #0056b3;
+      }
+    }
+
+    // Add more styles as needed
+  }
+
+  .teamSelector {
+    font-size: 0.8em;
+    display: block;
+  }
+
+  .teamGroup {
+    width: 100%;
+  }
+
+  .teamGroupCell {
+    display: flex;
+    text-align: center;
+    height: 100%;
+    width: 100%;
+  }
+
+  .goalieChart {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 250px;
+    padding: 10px;
+  }
+
+  .controlsContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+  }
+
+  .selectors {
+    margin-bottom: 20px;
+    display: flex;
+    justify-content: space-between;
+    gap: 10px;
+    width: 100%;
+
+    label {
+      background-color: #07aae2;
+      color: white;
+      padding: 3px 15px;
+      border-radius: 10px;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+
+      // This styles the label when the associated radio button is checked
+      input:checked + & {
+        background-color: #066995; /* Darkened background color, adjust as needed */
+        border: #f0f0f0 1px solid;
+      }
+    }
+
+    // Hide the actual radio button because we are styling the label
+    input[type="radio" i] {
+      display: none;
+    }
+  }
 }
