--- a/web/components/LinemateMatrix/index.module.scss
+++ b/web/components/LinemateMatrix/index.module.scss
@@ -21,8 +21,8 @@
   --player-info-size: 120px;
   font-size: 0.875rem;
   @media only screen and (max-width: $screen-small-max) {
-    --player-info-size: 100px;
-    font-size: 0.6rem;
+    --player-info-size: 80px;
+    font-size: 0.7rem;
   }
 
   // #__next > div > div.ShiftChart_shiftChartContainer__CgnMf > div:nth-child(3) > div > div.LinemateMatrix_gridWrapper__d0Bm9 > section:nth-child(2) > h4
@@ -66,7 +66,7 @@
     }
 
     .leftPlayerName {
-      text-align: right;
+      text-align: left;
       text-overflow: ellipsis;
       overflow: hidden;
       white-space: nowrap;
@@ -82,14 +82,14 @@
 
     .cell {
       border: 1px solid #585858;
-      background: #404040;
+      background: #292929;
 
       &:hover {
         border-color: darkorange; // Ensure hover effect is visible
       }
 
       &.highlight {
-        border: 2px solid #faa916; // Use a class to apply the highlight style
+        border: 1px solid #fff; // Use a class to apply the highlight style
       }
 
       & .content {
