box shadow home page

--- a/web/styles/Home.module.scss
+++ b/web/styles/Home.module.scss
@@ -627,7 +627,7 @@
   .rightImage {
     right: -10px;
     bottom: 8px;
-    filter: drop-shadow(0 0 3px #000);
+    filter: drop-shadow(0 0 3px #fff);
   }
 
   .leftImage {
