--- a/web/components/LinemateMatrix/index.module.scss
+++ b/web/components/LinemateMatrix/index.module.scss
@@ -89,7 +89,7 @@
       }
 
       &.highlight {
-        border: 1px solid #fff; // Use a class to apply the highlight style
+        border: 1px solid #e5d2b0; // Use a class to apply the highlight style
       }
 
       & .content {
