--- a/web/styles/Goalies.module.scss
+++ b/web/styles/Goalies.module.scss
@@ -1,10 +1,10 @@
 .better {
-  background-color: #0984ad;
+  background-color: #09ad81;
   color: white;
 }
 
 .worse {
-  background-color: #b31c1c;
+  background-color: #af3d3d;
   color: white;
 }
 
