--- a/web/components/DateRangeMatrix/drm.module.scss
+++ b/web/components/DateRangeMatrix/drm.module.scss
@@ -1,5 +1,3 @@
-// C:\Users\timbr\OneDrive\Desktop\fhfhockey.com-3\web\components\DateRangeMatrix\drm.module.scss
-
 .drmContainer {
   margin: 0 auto;
   width: 100%;
@@ -9,12 +7,77 @@
 }
 
 .pageTitle {
-  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0.5rem;
   margin-bottom: 1rem;
+  margin-top: 0;
+  padding-left: 2rem;
+  font-size: 2.5rem;
+  font-weight: 900;
+  text-align: left;
+  font-family: roboto condensed, sans-serif;
+  text-transform: uppercase;
+  letter-spacing: 1.5px;
+  position: relative;
+  background: linear-gradient(
+    180deg,
+    #07aae2 0%,
+    #07aae2 2%,
+
+    var(--accent-color) 2%,
+    var(--accent-color) 7%,
+
+    var(--primary-color) 7%,
+    var(--primary-color) 65%,
+
+    var(--jersey-color) 65%,
+    var(--jersey-color) 70%,
+
+    var(--accent-color) 70%,
+    var(--accent-color) 75%,
+
+    var(--secondary-color) 75%,
+    var(--secondary-color) 80%,
+
+    var(--jersey-color) 80%,
+    var(--jersey-color) 100%
+  ); // Gradient using team colors
+  color: var(--accent-color); // Dynamic secondary color for text
+  border-bottom: 5px solid var(--accent-color); // Dynamic accent color
+  overflow: hidden;
 }
 
-.optionsContainer {
-  width: 95%;
+.teamLogo {
+  width: 90px; // Size of the logo
+  height: 90px; // Size of the logo
+  margin-right: 1rem;
+  margin-left: 2rem;
+  z-index: 1; // Ensure logo is on top of the gradient
+  filter: drop-shadow(
+    0 0 5px var(--accent-color)
+  ); // Add a drop shadow to the logo
+}
+
+.teamName {
+  flex-grow: 1;
+  z-index: 1; // Ensure the team name is on top of the gradient
+  margin-left: 1rem;
+  margin-bottom: 2rem;
+}
+
+.teamLocation {
+  color: var(--accent-color); /* Style for the location part */
+}
+
+.teamShortName {
+  color: var(--jersey-color); /* Style for the short name part */
+}
+
+.optionsContainer,
+.contentContainer {
+  width: 95%; /* Set the width to 95% of the parent container */
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
@@ -23,19 +86,140 @@
 }
 
 .options1,
-.options2 {
-  flex: 1;
+.options2,
+.linePairGrid,
+.dateRangeMatrixContainer {
+  flex: 1 1 0;
   display: flex;
   flex-direction: column;
+  max-width: 600px; /* Ensure that both containers maintain a 1:1 ratio */
 }
 
-.datePickers {
+.dropdownGroup,
+.datePickerGroup {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   margin-bottom: 1rem;
 }
 
-.buttonsContainer {
+.datePickerGroup {
+  flex: 1;
+}
+
+.label {
+  font-size: 0.85rem;
+  font-weight: bold;
+  color: white;
+  margin-right: 0.5rem;
+  min-width: 70px;
+  text-align: right;
+}
+
+.customSelect {
+  position: relative;
+  display: inline-block;
+  width: 30%;
+  font-family: "Roboto Condensed", sans-serif;
+
+  select {
+    width: 100%;
+    padding: 8px 12px;
+    border: 2px solid rgba(255, 255, 255, 0.15);
+    border-radius: 5px;
+    background-color: rgba(255, 255, 255, 0.15);
+    color: white;
+    appearance: none; /* Removes the default dropdown arrow */
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    cursor: pointer;
+    font-family: "Roboto Condensed", sans-serif; /* Apply font to the select element */
+  }
+
+  &::after {
+    content: "\25BC"; /* Custom arrow symbol */
+    position: absolute;
+    top: 50%;
+    right: 12px;
+    transform: translateY(-50%);
+    pointer-events: none; /* Arrow doesn't block the dropdown */
+    color: white;
+    font-size: 12px;
+  }
+
+  select:focus {
+    outline: none;
+    border-color: #07aae2;
+  }
+
+  select option {
+    background-color: #404040;
+    color: white;
+    padding: 10px;
+    font-family: "Roboto Condensed", sans-serif; /* Apply font to options */
+  }
+
+  select option:hover {
+    background-color: #07aae2;
+    color: white;
+  }
+}
+
+/* Override the day, day-name, and time-name styles */
+.datePickerGroup {
+  .react-datepicker__day-name,
+  .react-datepicker__day,
+  .react-datepicker__time-name {
+    color: white; /* Change text color to white */
+    background-color: #202020; /* Change background color */
+    border-radius: 5px; /* Add some border-radius */
+    font-family: "Roboto Condensed", sans-serif; /* Use Roboto Condensed font */
+    font-size: 14px; /* Adjust font size if needed */
+  }
+
+  /* Override selected day */
+  .react-datepicker__day--selected,
+  .react-datepicker__day--keyboard-selected {
+    background-color: #07aae2; /* Selected day background color */
+    color: white; /* Selected day text color */
+  }
+
+  /* Override hover effect */
+  .react-datepicker__day:hover {
+    background-color: #07aae2; /* Hover background color */
+    color: white; /* Hover text color */
+  }
+
+  /* Adjust the date picker input */
+  .react-datepicker-wrapper input {
+    width: 100%;
+    padding: 8px 12px;
+    border: 2px solid #07aae2;
+    border-radius: 5px;
+    background-color: #202020;
+    color: white;
+    font-family: "Roboto Condensed", sans-serif;
+    font-size: 15px;
+    cursor: pointer;
+
+    &:focus {
+      outline: none;
+      border-color: #07aae2;
+    }
+  }
+}
+
+.datePickerInput {
+  width: 100%;
+  background-color: rgba(255, 255, 255, 0.15);
+  border: 2px solid rgba(255, 255, 255, 0.15);
+  border-radius: 5px;
+  padding: 8px 12px;
+  color: white;
+  font-family: roboto condensed, sans-serif;
+}
+
+.datePickers {
   display: flex;
   justify-content: space-between;
   margin-bottom: 1rem;
@@ -45,61 +229,12 @@
   position: relative;
   font-size: 15px;
   font-weight: 700;
+}
 
-  .select {
-    background: rgba(255, 255, 255, 0.15);
-    border: 2px solid rgba(255, 255, 255, 0.15);
-    border-radius: 4px;
-    color: white;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 10px;
-    padding: 3px 8px;
-    height: 100%;
-
-    .label {
-      white-space: nowrap;
-      overflow-x: hidden;
-      text-overflow: ellipsis;
-    }
-
-    .arrow:hover {
-      cursor: pointer;
-    }
-
-    .up {
-      transform: rotate(180deg);
-    }
-  }
-
-  .options {
-    position: absolute;
-    z-index: 10;
-    background-color: #4b4b4b;
-    width: 100%;
-    border-radius: 4px;
-    padding: 3px 0px;
-    max-height: 300px;
-    overflow-y: scroll;
-
-    & > div {
-      padding: 0.3rem 8px;
-      cursor: pointer;
-      &:hover {
-        background-color: rgba(217, 217, 217, 0.25);
-      }
-      &:not(:last-child) {
-        margin-bottom: 3px;
-      }
-    }
-
-    .selected {
-      background-color: rgba(217, 217, 217, 0.25);
-      font-size: 15px;
-      font-weight: 700;
-    }
-  }
+.buttonsContainer {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 1rem;
 }
 
 .button {
@@ -113,17 +248,6 @@
   &.active {
     background-color: #ff4500;
   }
-}
-
-.contentContainer {
-  display: flex;
-  justify-content: space-between;
-  gap: 1rem;
-  width: 95%;
-  margin: 0 auto;
-  position: relative;
-  height: 100%;
-  flex-grow: 1;
 }
 
 .linePairGrid,
@@ -144,4 +268,28 @@
   align-items: center;
   justify-content: center;
   background-color: rgba(0, 0, 0, 0.7); /* Optional: Add a background overlay */
+}
+
+.timeFrameToggle {
+  display: flex;
+  justify-content: space-around;
+  margin: 1rem 0;
+
+  button {
+    background: var(--secondary-color);
+    border: none;
+    color: var(--accent-color);
+    padding: 0.5rem 1rem;
+    cursor: pointer;
+    transition: background 0.3s ease;
+
+    &:hover {
+      background: var(--primary-color);
+    }
+
+    &.active {
+      background: var(--primary-color);
+      color: var(--jersey-color);
+    }
+  }
 }
