--- a/web/styles/LinePairGrid.module.scss
+++ b/web/styles/LinePairGrid.module.scss
@@ -1,10 +1,8 @@
 .gridContainer {
   display: grid;
-  /* Adjust columns: 3 columns for forwards, 1 for the divider, 2 for defensemen/goalies */
   grid-template-columns: repeat(3, 1fr) min-content repeat(2, 1fr);
-  /* First row takes minimum content, others are equal */
   grid-template-rows: min-content repeat(4, 1fr);
-  gap: 1rem;
+  gap: 0.65rem;
   height: 100%;
   box-sizing: border-box;
   position: relative;
@@ -13,7 +11,7 @@
 .sectionLabel {
   text-align: center;
   color: white;
-  grid-column: span 3; /* Spanning 3 columns for forwards */
+  grid-column: span 3;
   margin: 0;
   line-height: 1;
   padding-bottom: 0.25rem;
@@ -21,7 +19,7 @@
 }
 
 .defenseLabel {
-  grid-column: 5 / span 2; /* Spanning 2 columns for defensemen */
+  grid-column: 5 / span 2;
   margin: 0;
   line-height: 1;
   padding-bottom: 0.25rem;
@@ -29,76 +27,248 @@
 }
 
 .goalieContainer {
-  grid-column: 5 / span 2; /* Spanning 2 columns */
+  grid-column: 5 / span 2;
   display: grid;
-  grid-template-rows: min-content 1fr; /* Label on top takes minimum content */
+  grid-template-rows: min-content 1fr;
   align-items: center;
 }
 
 .goalieLabel {
   text-align: center;
   color: white;
-  margin: 0; /* Remove margin */
-  line-height: 1; /* Reduce line height */
-  padding-bottom: 0.75rem; /* Add a small padding if needed */
+  margin: 0;
+  line-height: 1;
+  padding-bottom: 0.5rem;
   font-family: "Roboto Condensed", sans-serif;
 }
 
 .goalieCards {
   display: grid;
-  grid-template-columns: 1fr 1fr; /* Two columns for the goalies */
+  grid-template-columns: 1fr 1fr;
   gap: 0.5rem;
-  height: 100%;
-}
-
-.firstNamePlayerCard {
-  font-weight: 900;
-  font-variant: small-caps;
-  letter-spacing: 1.15px;
-  color: var(--secondary-color); /* Use CSS variable for secondary color */
-}
-
-.lastNamePlayerCard {
-  font-variant: small-caps;
-  font-weight: 900;
-  letter-spacing: 1.15px;
-  color: var(--accent-color); /* Use CSS variable for primary color */
-}
-
-.playerCard {
-  background-color: #f0f0f0;
-  font-size: 0.85rem;
-  font-weight: 100;
-  padding: 0.5rem;
-  text-align: left;
-  border: 1px solid #ccc;
-  border-radius: 3px;
-  color: #ffffff;
-  font-family: "Roboto Condensed", sans-serif;
   width: 100%;
-  min-width: 100px;
-  box-sizing: border-box; /* Ensure padding and borders are included in the width */
+  align-items: start;
 }
 
 .divider {
-  background-color: white; /* Set the color of the divider */
-  width: 1px; /* Adjusted width for better visibility */
-  grid-column: 4 / 5; /* The divider will occupy the fourth column */
-  grid-row: 2 / 6; /* Span the entire height of the grid, rows 2 to 6 */
+  background-color: white;
+  width: 2px;
+  grid-column: 4 / 5;
+  grid-row: 2 / 6;
 }
 
-.goalies .playerCard {
-  height: calc(100% - 0.5rem); /* Adjusted height to account for the label */
+.goalies .goalieCard {
+  height: calc(100% - 0.5rem);
   font-family: "Roboto Condensed", sans-serif;
 }
 
-.playerCard::after {
-  content: "";
-  display: block;
+.goalieCard {
+  background-color: var(--primary-color);
+  border: 2px solid var(--jersey-color);
+  border-radius: 2px;
+  color: white;
+  padding: 0.5rem;
+  text-align: left;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  position: relative;
   width: 100%;
+}
+
+.goalieCardHeader {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.goalieCardName {
+  display: flex;
+  flex-direction: column; /* Changed from column to row */
+  align-items: flex-start;
+  font-family: "Roboto Condensed", sans-serif;
+}
+
+.firstNameGoalieCard {
+  font-weight: 600;
+  font-variant: small-caps;
+  font-size: 0.9rem;
+  letter-spacing: 1.15px;
+  color: var(--secondary-color);
+  margin-right: 0.2rem; /* Add some spacing between first and last names */
+}
+
+.lastNameGoalieCard {
+  font-weight: 900;
+  font-variant: small-caps;
+  font-size: 0.9rem;
+  letter-spacing: 1.15px;
+  color: var(--accent-color);
+}
+
+.goalieRecord {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
+.goalieRecord .line.left {
+  flex: 1;
   height: 0.5px;
-  background-color: var(
-    --jersey-color
-  ); /* Use CSS variable for dynamic accent color */
-  margin: 0.3rem auto; /* Center the line horizontally */
+  background-color: var(--accent-color);
+  margin-right: 0.2rem;
+}
+
+.goalieRecord .line.right {
+  flex: 1;
+  height: 0.5px;
+  background-color: var(--accent-color);
+  margin-left: 0.2rem;
+}
+
+.goalieRecord span {
+  font-size: 0.6rem;
+  font-weight: bold;
+  color: var(--accent-color);
+  letter-spacing: 1px;
+}
+
+.statsGridGoalies {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  gap: 0.5rem;
+  width: 100%;
+}
+
+.goalieStat {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.goalieStatLabel {
+  font-size: 0.6rem;
+  font-weight: bold;
+  color: #ccc;
+  margin-bottom: 0.25rem;
+}
+
+.goalieStatValue {
+  font-size: 0.7rem;
+  color: var(--accent-color);
+  font-weight: bold;
+}
+
+.playerCard {
+  background-color: #202020;
+  height: 100%;
+  font-size: 1rem;
+  padding: 0.5rem;
+  text-align: left;
+  border: 2px solid #333;
+  border-radius: 2px;
+  color: white;
+  font-family: "Roboto Condensed", sans-serif;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  position: relative;
+}
+
+.playerCardHeader {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.playerCardName {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 100%;
+}
+
+.firstNamePlayerCard {
+  font-weight: 600;
+  font-variant: small-caps;
+  font-size: 0.75rem;
+  letter-spacing: 1.15px;
+  color: var(--secondary-color);
+}
+
+.lastNamePlayerCard {
+  font-weight: 900;
+  font-variant: small-caps;
+  font-size: 0.9rem;
+  letter-spacing: 1.15px;
+  color: var(--accent-color);
+}
+
+.lastTenGames {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.lastTenGames .line.left {
+  flex: 1;
+  height: 0.5px;
+  background-color: var(--accent-color);
+  margin-right: 0.2rem;
+}
+
+.lastTenGames .line.right {
+  flex: 1;
+  height: 0.5px;
+  background-color: var(--accent-color);
+  margin-left: 0.2rem;
+}
+
+.lastTenGames span {
+  font-size: 0.55rem;
+  font-weight: bold;
+  color: var(--accent-color);
+  letter-spacing: 1px;
+}
+
+.statsGrid {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 0.5rem;
+  width: 100%;
+}
+
+.stat {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.statLabel {
+  font-size: 0.6rem;
+  font-weight: bold;
+  color: #ccc;
+  margin-bottom: 0.25rem;
+}
+
+.statValue {
+  font-size: 0.9rem;
+  color: var(--accent-color);
+  font-weight: bold;
+}
+
+.displayPosition {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: white;
+  padding: 2px 4px;
+  border-radius: 3px;
+  font-size: 12px;
 }
