--- a/web/styles/teamStats.module.scss
+++ b/web/styles/teamStats.module.scss
@@ -109,16 +109,23 @@
 }
 
 .statsTableContainer {
+  font-family: roboto condensed, sans-serif;
+  font-size: 0.85rem;
   width: 95%;
   margin: 0 auto;
   overflow-x: auto;
   white-space: nowrap;
+  border: 2px solid #3f3f3f;
+  background-color: #3f3f3f;
+  border-radius: 8px;
+  margin-top: 20px;
+  padding: 3px;
 }
 
 .statsTable {
   width: 100%;
   border-collapse: collapse;
-  margin: 20px 0;
+  margin: 0 auto;
   border-radius: 4px; /* Rounded corners for the table */
   overflow: hidden; /* Ensure the border-radius is applied */
 }
@@ -143,43 +150,6 @@
   background-color: #343434;
 }
 
-/* Scrollbar styling */
-.chartContainer::-webkit-scrollbar {
-  height: 12px;
-}
-
-.chartContainer::-webkit-scrollbar-track {
-  background: #202020;
-}
-
-.chartContainer::-webkit-scrollbar-thumb {
-  background-color: #07aae2;
-  border-radius: 10px;
-  border: 3px solid #202020;
-}
-
-.chartContainer::-webkit-scrollbar-thumb:hover {
-  background-color: #07aae2;
-}
-
-.scrollableMenu::-webkit-scrollbar {
-  width: 12px; /* Same width as height for horizontal scrollbar */
-}
-
-.scrollableMenu::-webkit-scrollbar-track {
-  background: #202020;
-}
-
-.scrollableMenu::-webkit-scrollbar-thumb {
-  background-color: #07aae2;
-  border-radius: 10px;
-  border: 3px solid #202020;
-}
-
-.scrollableMenu::-webkit-scrollbar-thumb:hover {
-  background-color: #07aae2;
-}
-
 .showMoreButton {
   background-color: #07aae2;
   color: #ffffff;
@@ -194,149 +164,22 @@
   background-color: #0f4358;
 }
 
-.chartWrapper {
-  display: flex;
-  flex-direction: row;
-  align-items: center; /* Ensure items are aligned center vertically */
-  width: 90%;
-  margin: 0 auto;
-  border: 2px solid #e0e0e0;
-  padding: 10px;
+/* statsTable scrollbar styles */
+.statsTableContainer::-webkit-scrollbar {
+  width: 12px;
+}
+
+.statsTableContainer::-webkit-scrollbar-track {
+  background: #202020;
   border-radius: 8px;
-  background-color: #101010;
-  margin-top: 20px;
 }
 
-.yAxisContainer {
-  position: sticky;
-  left: 0;
-  z-index: 1;
-  background-color: transparent; /* Make background transparent */
-  height: 100%; /* Set height to 100% */
-  display: flex;
-  align-items: center; /* Align items to center vertically */
-}
-
-.chartContainer {
-  overflow-x: auto;
-}
-
-.yAxisSvg {
-  display: block;
-  height: 100%;
-  margin-bottom: 40%;
-}
-
-.playerSelectContainer {
-  display: flex;
-  flex-direction: column;
-  margin-right: 20px;
-}
-
-.scrollableMenu label {
-  display: block;
-  margin-bottom: 5px;
-  color: white;
-}
-
-.scrollableMenu input {
-  margin-right: 10px;
-}
-
-/* Reset Button Styling */
-.resetButton {
+.statsTableContainer::-webkit-scrollbar-thumb {
   background-color: #07aae2;
-  color: #ffffff;
-  border: none;
-  border-radius: 5px;
-  padding: 10px 20px;
-  cursor: pointer;
-  margin-top: 10px;
-  margin-left: 10px;
-  display: block;
-  font-family: "Roboto Condensed", sans-serif;
-  font-size: 0.75em;
-  text-transform: uppercase;
-  letter-spacing: 0.05em;
-  transition: background-color 0.3s ease;
+  border-radius: 10px;
+  border: 3px solid #202020;
 }
 
-.resetButton:hover {
-  background-color: #056990;
-}
-
-/* Tooltip Styling */
-.tooltip {
-  position: absolute;
-  text-align: center;
-  width: auto;
-  height: auto;
-  padding: 5px;
-  font: 12px sans-serif;
-  background: rgb(48, 76, 112);
-  border: 0px;
-  border-radius: 8px;
-  pointer-events: none;
-  opacity: 0;
-  transition: opacity 0.2s;
-}
-
-.selectButton {
-  margin-left: 10px;
-  background-color: #07aae2; /* Primary blue color */
-  color: #ffffff;
-  border: none;
-  border-radius: 5px;
-  padding: 10px 15px;
-  cursor: pointer;
-  margin-bottom: 10px; /* Space between buttons */
-  font-family: "Roboto Condensed", sans-serif;
-  font-size: 0.75em;
-  text-transform: uppercase;
-  letter-spacing: 0.05em;
-  transition: background-color 0.3s ease;
-}
-
-.selectButton:hover {
-  background-color: #0f4358; /* Darker blue on hover */
-}
-
-.scrollableMenu {
-  max-height: 400px; /* Adjust this value to your preference */
-  width: 190px;
-  overflow-y: auto;
-  background-color: #202020;
-  padding: 10px;
-  text-align: left;
-  font-family: "Roboto Condensed", sans-serif;
-  font-size: 0.85em;
-  border-radius: 4px;
-  border: 2px solid #7f7f7f;
-  margin-left: 10px;
-}
-
-.scrollableMenu label {
-  display: block;
-  margin-bottom: 5px;
-  color: white;
-}
-
-.scrollableMenu input {
-  margin-right: 10px;
-}
-
-/* Tooltip Styling */
-.tooltip {
-  position: absolute;
-  text-align: center;
-  width: auto;
-  height: auto;
-  padding: 5px;
-  font: 12px sans-serif;
-  background: rgb(48, 76, 112);
-  border: 0px;
-  border-radius: 8px;
-  pointer-events: none;
-  opacity: 0;
-  transition: opacity 0.2s;
+.statsTableContainer::-webkit-scrollbar-thumb:hover {
+  background-color: #07aae2;
 }
