--- a/web/styles/teamStats.module.scss
+++ b/web/styles/teamStats.module.scss
@@ -104,7 +104,7 @@
   margin: 0 auto;
   margin-top: 20px;
   background-color: #303030;
-  border-radius: 8px;
+  border-radius: 25px;
   padding: 10px;
 }
 
@@ -132,7 +132,7 @@
 
 .statsTable th,
 .statsTable td {
-  padding: 10px;
+  padding: 7px 5px;
   border: 2px solid #e0e0e0;
   text-align: center;
 }
