--- a/web/components/DateRangeMatrix/drm.module.scss
+++ b/web/components/DateRangeMatrix/drm.module.scss
@@ -80,7 +80,7 @@
   width: 95%; /* Set the width to 95% of the parent container */
   margin: 0 auto;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   gap: 1rem;
   margin-bottom: 1rem;
 }
