--- a/web/components/DateRangeMatrix/index.module.scss
+++ b/web/components/DateRangeMatrix/index.module.scss
@@ -102,14 +102,14 @@
   }
 
   .grid {
-    background-color: #202020;
+    background-color: #292929;
     color: #fff;
     display: grid;
     width: 95%;
     aspect-ratio: 1 / 1;
-    padding: var(--spacing);
-    border: 2px solid #07aae2;
-    border-radius: 5px;
+    padding: 20px;
+    border: 2px solid #292929;
+    border-radius: 10px;
 
     .topPlayerName {
       position: relative;
