--- a/web/styles/PPTOIChart.module.scss
+++ b/web/styles/PPTOIChart.module.scss
@@ -5,8 +5,8 @@
   width: 90%;
   margin: 0 auto;
   border: 2px solid #e0e0e0;
-  padding: 10px;
-  border-radius: 8px;
+  padding: 20px;
+  border-radius: 25px;
   background-color: #101010;
   margin-top: 20px;
 }
@@ -30,66 +30,78 @@
   align-items: center;
   width: 100%;
   margin-bottom: 10px;
+  padding-right: 3%;
 }
 
 .paginationButton {
   background-color: #07aae2;
   color: #ffffff;
   border: none;
-  border-radius: 5px;
+  border-radius: 7.5px;
   padding: 10px 20px;
   cursor: pointer;
   font-family: "Roboto Condensed", sans-serif;
-  font-size: 0.75em;
+  font-size: 0.7em;
+  text-transform: uppercase;
+  letter-spacing: 0.05em;
+  transition: background-color 0.3s ease;
+  width: 10%;
+  min-width: fit-content;
+}
+
+.paginationButton:hover {
+  background-color: #1c6d8d;
+  outline: 2px solid #07aae2;
+}
+
+.toggleButton {
+  margin-left: 10px;
+  background-color: #07aae2;
+  color: #ffffff;
+  border: none;
+  border-radius: 10px;
+  padding: 10px 20px;
+  cursor: pointer;
+  margin-bottom: 10px;
+  font-family: "Roboto Condensed", sans-serif;
+  font-size: 0.7em;
   text-transform: uppercase;
   letter-spacing: 0.05em;
   transition: background-color 0.3s ease;
 }
 
-.paginationButton:hover {
-  background-color: #0f4358;
+.toggleButton:hover {
+  background-color: #1c6d8d;
+  outline: 2px solid #07aae2;
 }
 
 .paginationSpacer {
   flex-grow: 1;
 }
 
+.toggleContainer {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
 .chartAndYAxis {
   display: flex;
   flex-direction: row;
-  align-items: stretch; /* Stretch the children to fill the height */
-  flex-grow: 1;
-  height: 100%; /* Ensure this container takes the full height */
-}
-
-.yAxisContainer {
-  display: flex;
-  align-items: center; /* Centers the SVG vertically */
-  justify-content: center; /* Optional: centers the SVG horizontally */
-  position: sticky;
-  left: 0;
-  z-index: 1;
-  background-color: transparent;
+  align-items: stretch;
   height: 100%;
-}
-
-.yAxisSvg {
-  height: 100%; /* Adjust this percentage to control the size */
-  max-height: 100%; /* Ensure it doesn't overflow the container */
-  width: 100%;
-  display: block;
-  margin-top: auto;
-  margin-bottom: auto;
 }
 
 .chartSvg {
   width: 100%;
   height: 100%;
-  flex-grow: 1; /* Ensure the SVG grows within the container */
+  flex-grow: 1;
+  margin-left: auto;
 }
 
 .chartContainer {
-  overflow-x: auto;
+  height: auto;
   flex-grow: 1; /* Allow chartContainer to grow and take up the remaining space */
   display: flex; /* Flex to allow the SVG to fill the container */
 }
@@ -103,7 +115,7 @@
   text-align: left;
   font-family: "Roboto Condensed", sans-serif;
   font-size: 0.85em;
-  border-radius: 4px;
+  border-radius: 8px;
   border: 2px solid #7f7f7f;
   margin-left: 10px;
 }
@@ -123,26 +135,27 @@
   background-color: #07aae2;
   color: #ffffff;
   border: none;
-  border-radius: 5px;
+  border-radius: 10px;
   padding: 10px 20px;
   cursor: pointer;
   margin-bottom: 10px;
   font-family: "Roboto Condensed", sans-serif;
-  font-size: 0.75em;
+  font-size: 0.7em;
   text-transform: uppercase;
   letter-spacing: 0.05em;
   transition: background-color 0.3s ease;
 }
 
 .selectButton:hover {
-  background-color: #0f4358;
+  background-color: #1c6d8d;
+  outline: #07aae2 2px solid;
 }
 
 .resetButton {
   background-color: #07aae2;
   color: #ffffff;
   border: none;
-  border-radius: 5px;
+  border-radius: 10px;
   padding: 10px 20px;
   cursor: pointer;
   margin-top: 10px;
@@ -156,7 +169,8 @@
 }
 
 .resetButton:hover {
-  background-color: #0f4358;
+  background-color: #1c6d8d;
+  outline: #07aae2 2px solid;
 }
 
 .tooltip {
@@ -168,30 +182,13 @@
   font: 12px sans-serif;
   background: rgb(48, 76, 112);
   border: 0px;
-  border-radius: 8px;
+  border-radius: 5px;
   pointer-events: none;
   opacity: 0;
   transition: opacity 0.2s;
 }
 
 /* Scrollbar styling */
-.chartContainer::-webkit-scrollbar {
-  height: 12px;
-}
-
-.chartContainer::-webkit-scrollbar-track {
-  background: #202020;
-}
-
-.chartContainer::-webkit-scrollbar-thumb {
-  background-color: #07aae2;
-  border-radius: 10px;
-  border: 3px solid #202020;
-}
-
-.chartContainer::-webkit-scrollbar-thumb:hover {
-  background-color: #07aae2;
-}
 
 .scrollableMenu::-webkit-scrollbar {
   width: 12px;
@@ -203,7 +200,7 @@
 
 .scrollableMenu::-webkit-scrollbar-thumb {
   background-color: #07aae2;
-  border-radius: 10px;
+  border-radius: 7.5px;
   border: 3px solid #202020;
 }
 
@@ -214,10 +211,8 @@
 .legendAndLabel {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
-  margin-top: 10px;
-  padding-left: 40px; /* Aligns with the left margin of the chart */
 }
 
 .legendSvg {
@@ -229,14 +224,25 @@
   display: flex;
   flex-direction: row;
   font-family: roboto condensed, sans-serif;
-  border: #07aae2 2px solid;
-  border-radius: 5px;
-  padding: 5px;
+  justify-content: center;
+  font-size: 0.75em;
+  border: #292929 2px solid;
+  background-color: #303030;
+  border-radius: 10px;
+  padding: 7px;
 }
 
 #monthYearLabel {
   font-size: 1em;
   font-family: roboto condensed, sans-serif;
+  text-transform: uppercase;
+  letter-spacing: 1.15px;
   color: white;
   text-align: left;
+}
+
+.grid .tick line {
+  stroke: #9fb11c;
+  stroke-width: 1px;
+  opacity: 1; /* Ensure grid lines are visible */
 }
