--- a/web/components/Layout/Layout.module.scss
+++ b/web/components/Layout/Layout.module.scss
@@ -6,7 +6,7 @@
   min-height: 100vh;
 
   .footer {
-    margin-top: 24px;
+    margin-top: auto;
     height: 65px;
     background: rgba(0, 0, 0, 0.3);
     display: flex;
