--- a/web/styles/teamStats.module.scss
+++ b/web/styles/teamStats.module.scss
@@ -1,5 +1,6 @@
 .teamStatsContainer {
   text-align: center;
+  height: 100%;
 }
 
 .spanColorBlue {
@@ -17,6 +18,7 @@
 
 .teamsGrid {
   width: 80%;
+  height: 100%;
   display: grid;
   grid-template-columns: repeat(8, 1fr);
   gap: 7px;
