--- a/web/styles/teamStats.module.scss
+++ b/web/styles/teamStats.module.scss
@@ -21,7 +21,7 @@
   height: 100%;
   display: grid;
   grid-template-columns: repeat(8, 1fr);
-  grid-gap: 15px;
+  grid-gap: 20px;
   justify-content: center;
   margin: 0 auto;
   max-width: 1200px;
@@ -33,8 +33,9 @@
   align-items: center;
   justify-content: center;
   text-align: center;
-  border: 2px solid #e0e0e0;
-  border-radius: 3px;
+  outline: 6px solid #343434;
+  border: 1px solid var(--secondary-color);
+  border-radius: 6px;
   width: 120px;
   height: 80px;
   background-color: var(--primary-color);
