--- a/web/styles/Blog.module.scss
+++ b/web/styles/Blog.module.scss
@@ -1,3 +1,6 @@
+/////////////////////////////////////////////////////////////////////////////////////////
+// C:\Users\timbr\OneDrive\Desktop\fhfhockey.com-3\web\styles\Blog.module.scss
+
 @import "styles/vars.scss";
 
 .posts {
