--- a/web/styles/Post.module.scss
+++ b/web/styles/Post.module.scss
@@ -1,3 +1,6 @@
+/////////////////////////////////////////////////////////////////////////////////////////
+// C:\Users\timbr\OneDrive\Desktop\fhfhockey.com-3\web\styles\Post.module.scss
+
 @import "styles/vars.scss";
 
 .postPage {
@@ -8,6 +11,8 @@
     .post {
       border: 2px solid white;
       padding: 0.5rem 1rem 0.3rem 1rem;
+      overflow: auto;
+      display: block;
       .header {
         h1 {
           margin: 0;
@@ -30,7 +35,9 @@
       }
 
       img {
-        max-width: 100%;
+        margin-right: 1rem;
+        float: left;
+        max-width: 50%;
       }
     }
 
