--- a/web/styles/PoissonHeatmap.module.scss
+++ b/web/styles/PoissonHeatmap.module.scss
@@ -1,43 +1,12 @@
-/* components/GameGrid/PDHC/PoissonHeatmap.module.scss */
+/* components/GameGrid/PDHC/PoissonHeatMap.module.scss */
 
 .chartContainer {
   width: 100%;
-  height: 100%;
+  height: 400px;
   padding: 20px;
-  background-color: #f9f9f9; /* Light background for contrast */
+  background-color: #404040; /* Light background for contrast */
   border-radius: 8px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-}
-
-.customTooltip {
-  background-color: rgba(255, 255, 255, 0.95);
-  border: 1px solid #ccc;
-  padding: 12px;
-  border-radius: 4px;
-  font-size: 0.9rem;
-  color: #333;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-
-.customTooltip .label {
-  font-weight: bold;
-  margin-bottom: 5px;
-}
-
-.customTooltip .intro {
-  margin-top: 5px;
-}
-
-.tooltipArrow {
-  width: 0;
-  height: 0;
-  border-left: 6px solid transparent;
-  border-right: 6px solid transparent;
-  border-top: 6px solid rgba(0, 0, 0, 0.8);
-  position: absolute;
-  bottom: -6px; /* Position the arrow at the bottom */
-  left: 50%;
-  transform: translateX(-50%);
 }
 
 .pdchTitle {
@@ -48,10 +17,6 @@
 }
 
 @media (max-width: 600px) {
-  .customTooltip {
-    font-size: 0.8rem;
-  }
-
   .pdchTitle {
     font-size: 1rem;
   }
