--- a/web/components/GameGrid/GameGrid.module.scss
+++ b/web/components/GameGrid/GameGrid.module.scss
@@ -3,6 +3,7 @@
 .actions {
   position: relative;
   width: 80%;
+  max-width: 1000px;
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
@@ -76,6 +77,19 @@
   border: 2px solid white;
 }
 
+.dateButtonMode {
+  font-family: roboto condensed, sans-serif;
+  position: relative;
+  height: 35px;
+  width: 115px;
+  background: #07aae2;
+  color: #ffffff;
+  border: 1px solid white;
+  padding-left: 20px;
+  padding-right: 20px;
+  border-radius: 8px;
+}
+
 .gridWrapper {
   margin-top: 10px;
 }
@@ -88,6 +102,7 @@
   font-size: 14px;
   text-align: left;
   width: 80%;
+  max-width: 1000px;
 }
 
 .scheduleGrid th {
