--- a/web/components/GameGrid/GameGrid.module.scss
+++ b/web/components/GameGrid/GameGrid.module.scss
@@ -152,7 +152,10 @@
 .scheduleGrid tr td:nth-child(10),
 .scheduleGrid tr td:nth-child(11) {
   background-color: #101010; /* Set the background color */
-  max-width: 50px;
+  min-width: 60px;
+  max-width: 100px;
+  max-height: 40px;
+  min-height: 40px;
 }
 
 .scheduleGrid tr th:nth-child(9),
