--- a/web/styles/pdhcTooltip.module.scss
+++ b/web/styles/pdhcTooltip.module.scss
@@ -57,10 +57,10 @@
 
 .closeButton {
   position: absolute;
-  top: 8px;
-  right: 12px;
+  top: 0px;
+  right: 4px;
   background: transparent;
-  color: var(--close-button-color, #fff);
+  color: #07aae2;
   border: none;
   font-size: 24px;
   cursor: pointer;
@@ -92,8 +92,8 @@
     transform: translate(-50%, -50%) translateY(-20px) scale(0.95); /* Initial slide up and scale */
     max-height: 90vh;
     overflow-y: auto;
-    padding: 20px; /* Increased padding for better touch targets */
     transition: opacity 0.3s ease, transform 0.3s ease;
+    padding: 20px;
   }
 
   .tooltipContent.visible {
